[package]
edition = "2024"
name = "criteria_policy_base"
version = "3.0.3"

[dependencies]
anyhow = { workspace = true }
const_format = "0.2"
kubewarden-policy-sdk = { workspace = true }
k8s-openapi = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
annotations = []
env_var = []
labels = []
cve_name = []

[dev-dependencies]
rstest = { workspace = true }
serde_yaml = { workspace = true }

# required to set at least one feature
criteria_policy_base = { path = ".", features = ["env_var"] }
